About to start significant user model changes (unfort already just started, but reversible)
DUI framework for user models